objects/nPortal__Route_Terms__c.object
<CustomObject>
    <description>--DEPRECATED-- A junction between a UI Route and a Document which causes the document to be listed for agreement on an Online Application in Customer Portal.</description>
    <fields>
        <fullName>nPortal__Agreement_Text__c</fullName>
        <description>This text is displayed along with a link to the document specified. String token {0} should be used to specify the position of the link.</description>
        <label>Agreement Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nPortal__Document__c</fullName>
        <description>Salesforce Id of the Document which will be displayed on a given Route in Online Applications</description>
        <inlineHelpText>Enter the Salesforce ID of the Document you wish to display for agreement on a particular Route in an Online Application.</inlineHelpText>
        <label>Document</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nPortal__Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Maps to a UI Route. The selected Document will be displayed on this Route.</description>
        <inlineHelpText>UI Route which will display this document on an Online Application</inlineHelpText>
        <label>Route</label>
        <referenceTo>nFORCE__Route__c</referenceTo>
        <relationshipLabel>Route Terms</relationshipLabel>
        <relationshipName>Route_Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nPortal__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>-D Route Terms</label>
    <nameField>
        <label>Route Terms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>-D Route Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>